; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_add_alternate_refs_to_pending.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_add_alternate_refs_to_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i32 }
%struct.add_alternate_refs_data = type { i32, %struct.rev_info* }

@add_one_alternate_ref = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rev_info*, i32)* @add_alternate_refs_to_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_alternate_refs_to_pending(%struct.rev_info* %0, i32 %1) #0 {
  %3 = alloca %struct.rev_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.add_alternate_refs_data, align 8
  store %struct.rev_info* %0, %struct.rev_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.rev_info*, %struct.rev_info** %3, align 8
  %7 = getelementptr inbounds %struct.add_alternate_refs_data, %struct.add_alternate_refs_data* %5, i32 0, i32 1
  store %struct.rev_info* %6, %struct.rev_info** %7, align 8
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.add_alternate_refs_data, %struct.add_alternate_refs_data* %5, i32 0, i32 0
  store i32 %8, i32* %9, align 8
  %10 = load i32, i32* @add_one_alternate_ref, align 4
  %11 = call i32 @for_each_alternate_ref(i32 %10, %struct.add_alternate_refs_data* %5)
  ret void
}

declare dso_local i32 @for_each_alternate_ref(i32, %struct.add_alternate_refs_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
